src/objects/npe01__OppPayment__c.object
<CustomObject>
    <fields>
        <fullName>npe01__Check_Reference_Number__c</fullName>
        <label>Check/Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Custom_Payment_Field__c</fullName>
        <label>Custom Payment Field</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>OppPayment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe01__Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CreditCard</fullName>
                </value>
                <value>
                    <fullName>GiftAid</fullName>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Written_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Written Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp4hub__Collected_Through__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collected Through</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.npe01__Opportunity__c</field>
                <operation>equals</operation>
                <valueField>cpm__Installment__c.npsp4hub__Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cpm__Installment__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp4hub__Mandate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mandate</label>
        <referenceTo>cpm__Mandate__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp4hub__Payment_Processor__c</fullName>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>npe01__Payment_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PaymentHub-Stripe</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-GiftAid</fullName>
                </value>
                <value>
                    <fullName>PaymentHub-BACS</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp4hub__Payment_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Profile</label>
        <referenceTo>cpm__Payment_Profile__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp4hub__Target__c</fullName>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>npsp4hub__Payment_Processor__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NCT Training Fee Collections - S18</fullName>
                </value>
                <value>
                    <fullName>NCT Membership Collections - S18</fullName>
                </value>
                <value>
                    <fullName>NCT Course Fee Collections - S18</fullName>
                </value>
                <value>
                    <fullName>HMRC</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Payment_Acknowledged_Date__c</fullName>
        <description>Used to track date opportunity was acknowledged</description>
        <inlineHelpText>Date of acknowledgment</inlineHelpText>
        <label>Payment Acknowledged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Acknowledgment_Status__c</fullName>
        <description>Status of Acknowledgment of this payment.</description>
        <inlineHelpText>Status of Acknowledgment of this payment.</inlineHelpText>
        <label>Payment Acknowledgment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Do Not Acknowledge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PMT-{00000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>